[project]
name = "py-buzz"
version = "7.0.0"
description = "\"That's not flying, it's falling with style\": Exceptions with extras"
authors = [
    {name = "Tucker Beck", email ="tucker.beck@gmail.com"},
]
readme = "README.md"
license-files = ["LICENSE.md"]
requires-python = ">=3.9"

[project.urls]
homepage = "https://dusktreader.github.io/py-buzz/"
source = "https://github.com/dusktreader/py-buzz"
changelog = "https://github.com/dusktreader/py-buzz/blob/main/CHANGELOG.md"

[project.optional-dependencies]
demo = [
    "auto-name-enum>=2.0.0",
    "rich>=13.9.4",
    "snick>=1.4.1",
    "typer>=0.15.2",
]

[project.scripts]
py-buzz-demo = "demo.main:main[cli]"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "basedpyright>=1.28.4",
    "ipython>=8.18.1",
    "mkdocs-material>=9.6.9",
    "mkdocstrings-python>=1.16.7",
    "mypy~=1.15",
    "pyclean>=3.1.0",
    "pygments>=2.19.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-random-order>=1.1.1",
    "ruff>=0.11.2",
]

[tool.pytest.ini_options]
minversion = "7.4.0"
addopts = [
    "--cov=src/buzz",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
    "--cov-report=xml:.coverage.xml",
    "--junitxml=.junit.xml",
    "--override-ini=junit_family=legacy",
]

[tool.ruff]
line-length = 120

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
reportDeprecated = false

[tool.hatch.build.targets.wheel]
packages = [
    "src/buzz",
    "src/demo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
